--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,9 @@
 body {
     background-color: #621402;
     margin: 0;
-    background-image: url("../imgs/bg.png");
+    background-image: url("/imgs/bg.png");
     background-repeat: no-repeat;
     background-position: center top;
-    background-size: cover;
     height: 100vh; 
     overflow-y: auto; 
 }
@@ -122,7 +121,6 @@ header {
 
 .booking {
     display: flex;
-    flex-wrap: wrap;
 }
 
 .block-header {
@@ -185,7 +183,7 @@ header {
 }
 
 .--cinema {
-    width: 400px;
+    min-width: 400px;
 }
 
 .date:hover {
@@ -196,7 +194,7 @@ header {
 .scheme { 
     background-color: rgba(36, 36, 36, 0.18);
     border-radius: 10px;
-    margin: 63px;
+    margin: 63px
 }
 
 .scheme path:not(.light) {
@@ -248,17 +246,6 @@ header {
     padding: 24px 52px;
     text-decoration: none;
 }
-
-@media (max-width: 1200px) {
-    .wrapper {
-        max-width: 960px;
-    }
-
-    .cinema {
-        width: 100%;
-    }
-}
-
 
 
 
