--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,9 @@
 body {
     background-color: #621402;
     margin: 0;
-    background-image: url("../imgs/bg.png");
+    background-image: url("/imgs/bg.png");
     background-repeat: no-repeat;
     background-position: center top;
-    background-size: cover;
     height: 100vh; 
     overflow-y: auto; 
 }
@@ -122,7 +121,6 @@ header {
 
 .booking {
     display: flex;
-    flex-wrap: wrap;
 }
 
 .block-header {
@@ -258,7 +256,4 @@ header {
         width: 100%;
     }
 }
-
-
-
 
